--- a/package.json
+++ b/package.json
@@ -7,18 +7,24 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "json-server": "json-server --watch db.json --port 3000"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "~8.0.0",
     "@angular/common": "~8.0.0",
     "@angular/compiler": "~8.0.0",
-    "@angular/core": "~8.0.0",
+    "@angular/core": "^8.0.3",
     "@angular/forms": "~8.0.0",
+    "@angular/http": "^7.2.16",
     "@angular/platform-browser": "~8.0.0",
     "@angular/platform-browser-dynamic": "~8.0.0",
     "@angular/router": "~8.0.0",
+    "JSONPath": "^0.11.2",
+    "jquery": "^3.5.1",
+    "json-query": "^2.2.2",
+    "jsonq": "^1.2.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
